# slack-mcp

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  bazel-bin  bazel-out  bazel-slack-mcp  bazel-testlogs  requirements.txt  requirements_lock.txt  server.py
